--- a/dfs/node/UiResources.resx
+++ b/dfs/node/UiResources.resx
@@ -57,20 +57,19 @@
 	<resheader name="writer">
 		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</resheader>
-	<assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
 	<data name="index.html" type="System.Resources.ResXFileRef, System.Windows.Forms">
-		<value>UiResources\index.html;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+		<value>UiResources/index.html;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</data>
 	<data name="vite.svg" type="System.Resources.ResXFileRef, System.Windows.Forms">
-		<value>UiResources\vite.svg;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+		<value>UiResources/vite.svg;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</data>
-	<data name="assets\index-DiXh2NFf.js" type="System.Resources.ResXFileRef, System.Windows.Forms">
-		<value>UiResources\assets\index-DiXh2NFf.js;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+	<data name="assets/index-CX0ZyfE8.js" type="System.Resources.ResXFileRef, System.Windows.Forms">
+		<value>UiResources\assets/index-CX0ZyfE8.js;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</data>
-	<data name="assets\index-n_ryQ3BS.css" type="System.Resources.ResXFileRef, System.Windows.Forms">
-		<value>UiResources\assets\index-n_ryQ3BS.css;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+	<data name="assets/index-n_ryQ3BS.css" type="System.Resources.ResXFileRef, System.Windows.Forms">
+		<value>UiResources\assets/index-n_ryQ3BS.css;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</data>
-	<data name="assets\react-CqE24J1b.svg" type="System.Resources.ResXFileRef, System.Windows.Forms">
-		<value>UiResources\assets\react-CqE24J1b.svg;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+	<data name="assets/react-CqE24J1b.svg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+		<value>UiResources\assets/react-CqE24J1b.svg;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</data>
 </root>
