--- a/dfs/node/UiResources.resx
+++ b/dfs/node/UiResources.resx
@@ -66,7 +66,7 @@
 	<data name="assets/index-BeHChQM8.css" type="System.Resources.ResXFileRef, System.Windows.Forms">
 		<value>UiResources\assets/index-BeHChQM8.css;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</data>
-	<data name="assets/index-CaxTI3a2.js" type="System.Resources.ResXFileRef, System.Windows.Forms">
-		<value>UiResources\assets/index-CaxTI3a2.js;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+	<data name="assets/index-Wvr45oZn.js" type="System.Resources.ResXFileRef, System.Windows.Forms">
+		<value>UiResources\assets/index-Wvr45oZn.js;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</data>
 </root>
